--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<head>
 		<meta charset="utf-8">
 		<title>GitHub User Search</title>
-		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+		<link rel="stylesheet" href="./public/style.css" />
 		<script src="bower_components/jquery/dist/jquery.js"></script>
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/angular-resource/angular-resource.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/gitUserSearchController.js"></script>
+		<script src="js/searchFactory.js"></script>
 	</head>
 
 	<body ng-controller="GitUserSearchController as searchCtrl">
