--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </form>
       </div>
       <div class="box-containing-user-list">
+        <h2>Search Results:</h2>
         <div class="list-of-users">
           <ul class="list-group" ng-repeat="user in searchCtrl.searchResult.items">
             <li class="list-group-item">
